# routes/index.js
@@ -14,25 +14,27 @@ api.post('/user', userControllers.saveUser)
 api.put('/user/:userId', userControllers.updateUser2 )
 api.delete('/user/:userId', userControllers.deleteUser )
 
+//---------REGISTER----------
 api.post('/signUp', userControllers.signUp )
 api.post('/login', userControllers.logIn )
-api.get('/profile/:email', userControllers.getUserProfile)
-api.put('/profile', userControllers.updateUser )
 api.post('/loginFacebook', (req,res) => {res.status(500).send({message: 'not implemented yet'})})
-api.put('/password', userControllers.updateUser )
-api.get('/recoveredPassword', userControllers.getTokenRecoverPasswordUser)
-api.put('/recoveredPassword', userControllers.updatePasswordUser)
 
-//---------ORGANIZACIONES----------
+//---------USERS----------
+api.get('user/profile/:email', userControllers.getUserProfile)
+api.put('user/profile', userControllers.updateUser )
+api.put('user/password', userControllers.updateUser )
+api.get('user/recoveredPassword', userControllers.getTokenRecoverPasswordUser)
+api.put('user/recoveredPassword', userControllers.updatePasswordUser)
+
+//---------ORGANITIONS----------
 api.get('/organizations/:userEmail',organizationControllers.getUserOrganizations)
 api.get('/privateMsj',organizationControllers.getPrivateMsj)
 api.get('/idOrganizationValid/:organizationID',organizationControllers.isOrganizationIDValid)
 api.post('/organization',organizationControllers.createOrganization)
-api.post('/userOrganization',organizationControllers.addUserToOrganization)
+api.post('/organization/user',organizationControllers.addUserToOrganization)
 api.get('/organization/:token/:organizationID',organizationControllers.getInfoOrganization)
-api.put('/nameOrganization',organizationControllers.updateNameOrganization)
-api.put('/pswOrganization',organizationControllers.updatePasswordOrganization)
-
+api.put('/organization/name',organizationControllers.updateNameOrganization)
+api.put('/organization/password',organizationControllers.updatePasswordOrganization)
 
 
 module.exports = api
